--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: IoT ALGYAN - All Gadget Your Alliance and Network -
 description: IoTあるじゃん
