--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
-title: IoT ALGYAN - All Gadget Your Alliance and Network -
-description: IoTあるじゃん
+baseurl: ""
+url: "https://nagahisa.github.io"
+theme: jekyll-theme-leap-day
