--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: IoT ALGYAN - All Gadget Your Alliance and Network -
-description: IoTあるじゃん
+title: Nagahisa's Site - Don’t sleep through life! -
+description: Nagahisa's Site
